--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,16 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Profile</title>
+    <title>Home</title>
   </head>
   <body>
-    Hello!
+    Welcome!
     <a href="/signup">
       <button>Sign Up</button>
     </a>
-
     <a href="/login">
-      <button>Log In</button>
+      <button>Sign In</button>
     </a>
   </body>
 </html>
