--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,18 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Signup</title>
+    <title>Login</title>
   </head>
   <body>
-    This is the signup page
-    <form class="form-class" action="/signup" method="post">
+    This is the login page
+    <form class="form-class" action="/login" method="post">
       <input type="text" name="email" value="" placeholder="email">
       <input type="text" name="password" value="" placeholder="password">
-      <input type="text" name="confirm" value="" placeholder="confirmation">
       <input type="submit" value="Submit" />
     </form>
-    <div class="error">
-      If there is an error, it displays here
-    </div>
   </body>
 </html>
